# elmo-harness

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PLAN.md  README.md  SHOWCASE.md  down  install.sh  pyproject.toml  up
.github/workflows/: ci.yml
docs/: index.html
examples/: function-calling.yaml  json-structured.yaml  math.yaml
src/elmo/: __init__.py  cache.py  catalog.py  cli.py  config.py  download.py  hf_auth.py  hub.py  presets.py  pricing.py  reward.py  roles.py  run.py  spec.py  storage.py  system.py  trajectory.py  wizard.py
src/elmo/backends/: __init__.py  base.py  grpo.py  mlx.py  rft.py
src/elmo/data/: __init__.py  function_calling_seed.py  gsm8k.py  structured.py  xlam.py
src/elmo/eval/: __init__.py  function_calling.py  math.py  structured.py  verifier.py
src/elmo/foundry/: __init__.py  filter.py  generator.py  pipeline.py  planner.py  provenance.py
src/elmo/loop/: __init__.py  diagnose.py  gate.py  regression.py
src/elmo/providers/: __init__.py  anthropic.py  base.py  cached.py  openai_compat.py
src/elmo/server/: __init__.py  app.py  runner.py
src/elmo/server/ui/: app.js  index.html  style.css
tests/: test_cache.py  test_foundry.py  test_loop.py  test_math_eval.py  test_onboard.py  test_providers.py  test_reward.py  test_server.py  test_spec.py  test_trajectory.py  test_verifier.py  test_wizard.py
