[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elmo-harness"
version = "0.1.0"
description = "Prompt to fine-tuned expert SLM. An open-source harness that plans, trains, evaluates, and iterates."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Sahil Sangwan" }]
keywords = ["llm", "fine-tuning", "slm", "mlx", "lora", "function-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "datasets>=2.18",
    "huggingface-hub>=0.23",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.18"]
cuda = ["unsloth>=2024.8", "trl>=0.9"]
ui = ["fastapi>=0.110", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.5", "pyright>=1.1", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
elmo = "elmo.cli:app"

[project.urls]
Homepage = "https://github.com/sangwansahil/elmo-harness"
Repository = "https://github.com/sangwansahil/elmo-harness"
Issues = "https://github.com/sangwansahil/elmo-harness/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/elmo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
